Small bug fix in danger data Added crude expand/collapse for summary detail data Basic styling corrections

--- a/css/detail.css
+++ b/css/detail.css
@@ -3,12 +3,30 @@
   grid-template-columns: 30% 40% 30%;
   background-color: var(--colour1);
   font-size: 1rem;
+  text-align: center;
   color: white;
   padding: 0.5rem;
   margin-top: 0.2rem;
   margin-bottom: 10px;
-  width: 12rem; /* delete this - for testing only */
+  width: 100%;
   height: 3rem; /* delete this - for testing only */
+  grid-column: 1 / 13;
+}
+
+#collection-nav > span:nth-child(1) {
+  text-align: left;
+  width: 100%;
+}
+
+#collection-nav > span:nth-child(2) {
+  text-align: center;
+  padding: 0.5rem;
+  font-size: 1.2rem;
+}
+
+#collection-nav > span:nth-child(3) {
+  text-align: right;
+  width: 100%;
 }
 
 .nav-button {
@@ -58,12 +76,22 @@
   font-size: 0.8rem;
 }
 
+#basics-detail-grid,
+#features-and-warnings,
+#detail-body {
+  grid-column: 1 / 5;
+}
+
 #basics-summary,
 #features-and-warnings-summary {
   display: grid;
   grid-template-columns: repeat(8, 2rem);
   grid-template-rows: repeat(2, 1rem);
   column-gap: 0.5rem;
+  border: 1px solid lightgray;
+  grid-column: 1 / 5;
+  padding: 0.5rem;
+  background-color: white;
 }
 
 #features-and-warnings-summary {
@@ -133,6 +161,7 @@ h4 {
   width: 30rem;
   margin-top: 20px;
   margin-bottom: 20px;
+  grid-column: 1 / 13;
 }
 
 #detail-body {
